# jampy-vs-zombies

./: CMakeLists.txt  README.md
cmake/: FindSDL2.cmake
src/: animation_player.h  asset_manager.cpp  game.cpp  game.h  game_object.cpp  game_object.h  game_object_collection.cpp  game_object_collection.h  game_state.cpp  game_state.h  input_manager.cpp  main.cpp  player.cpp  player.h  sandbox_state.cpp  sandbox_state.h  sprite.cpp  sprite.h  texture.cpp  texture.h  transform.h  transformable.h  vector2.h
src/core/: game.cpp  game.h  game_object.cpp  game_object.h  game_object_collection.cpp  game_object_collection.h  game_state.cpp  game_state.h  game_state_manager.cpp  game_state_manager.h
src/graphics/: animation.h  animation_player.cpp  animation_player.h  drawable.h  orthographic_camera.cpp  orthographic_camera.h  renderer.cpp  renderer.h  sprite.cpp  sprite.h  transform.h  transform.inl  transformable.h  window.cpp  window.h
src/input/: input_manager.cpp  input_manager.h
src/resources/: asset_manager.cpp  asset_manager.h
src/tilemap/: tile.h  tile_layer.cpp  tile_layer.h  tile_set.cpp  tile_set.h
